# smr-production-costs

./: .gitignore  README.md  environment.yml  pyproject.toml
config/: adjusted.yaml  reference.yaml
data/: adjusted.yaml  adjusted_triangular.yaml  adjusted_triangular_opex.yaml  adjusted_triangular_opex_lr.yaml  project_data_raw.csv  reference.yaml
scripts/: adjusted_data.py  analyze_results.py  case_studies.py  job_scheduler.py  run_mcs.py  value_factor.py
smr_mcs/: config.py  distributions.py  functions.py  learning_functions.py  project.py  simulation_runner.py
