[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "smr_mcs"
version = "0.1.0"
description = "SMR Monte Carlo."
authors = []
maintainers = []
readme = "README.md"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.poetry.dependencies]
python = ">=3.7"

